--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -24,3 +24,38 @@ body {
   color: var(--foreground);
   font-family: Arial, Helvetica, sans-serif;
 }
+.loader {
+  width: 80px;
+  height: 50px;
+  position: relative;
+}
+
+.loader:before {
+  content: '';
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  /* Using Azuki's signature red color */
+  background: #ED1C24; 
+  border-radius: 50px;
+  border: 5px solid #000;
+  animation: loading 2.5s infinite ease-in-out;
+}
+
+@keyframes loading {
+  0% {
+    transform: scale(0.2);
+    opacity: 0;
+  }
+
+  50% {
+    opacity: 1;
+  }
+
+  100% {
+    transform: scale(1.2);
+    opacity: 0;
+  }
+}
